== (unreleased)

* Add :shared_children variable to customize which subdirectories are created by deploy:setup [Jonathan Share]

* Allow filename globbing in copy_exclude setting for the copy strategy [Jonathan Share]

* Allow remote_cache strategy to use copy_exclude settings (requires rsync) [Lewis Mackenzie]

* Make None SCM module work in Windows [Carlos Kozuszko]

* Recognize mingw as a Windows platform [Carlos Kozuszko]

* Fixed failing tests in Windows [Carlos Kozuszko]

* Made :scm_auth_cache control whether password option is emitted in subversion module [Brendan Schwartz]

* Fixed timestamp bug in CVS module [Jørgen Fjeld]

* Added -n/--dry-run switch, to display but not execute remote tasks [Paul Gross]


== 2.4.3 / June 28, 2008

* Fix gem dependencies so gem actually understands them [Jamis Buck]


== 2.4.2 / June 27, 2008

* Specify gem dependencies in rakefile [Jamis Buck]


== 2.4.1 / June 27, 2008

* Use Echoe to manage the Rakefile [Jamis Buck]

* Let Net::SSH manage the default SSH port selection [Ben Lavender]

* Changed capture() helper to not raise an exception on error, but to warn instead [Jeff Forcier]


== 2.4.0 / June 13, 2008

* Added :normalize_asset_timestamps option to deployment, defaulting to true, which allows asset timestamping to be disabled [John Trupiano]


== 2.4.0 Preview Release #1 (2.3.101) / June 5, 2008 

* Only make deploy:start, deploy:stop, and deploy:restart try sudo as :runner. The other sudo-enabled tasks (deploy:setup, deploy:cleanup, etc.) will now use the :admin_runner user (which by default is unset). [Jamis Buck]

* Make sure triggers defined as a block inherit the scope of the task they are attached to, instead of the task they were called from [Jamis Buck]

* Make deploy:upload use the upload() helper for more efficient directory processing [Jamis Buck]

* Make deploy:upload accept globs [Mark Imbriaco]

* Make sure the host is reported with the output from scm_run [Jamis Buck]
