@@ -1,5 +1,7 @@
 == (unreleased)
 
+* Make sure a task only uses the last on_rollback block, once, on rollback [Jamis Buck]
+
 * Add :shared_children variable to customize which subdirectories are created by deploy:setup [Jonathan Share]
 
 * Allow filename globbing in copy_exclude setting for the copy strategy [Jonathan Share]
